# ENUNU

./: .gitignore  HISTORY.md  LICENSE  LICENSE.md  LICENSE.txt  README.md  README_English.md  REPORT.md  enunu.py  install_torch.py  prepare_enunu_release.py  pyproject.toml  repair_packages.bat  requirements.txt  run_sh.py
conf/: LICENSE.md  config_sample.yaml
enulib/: __init__.py  enunu2nnsvs.py  extensions.py  install_torch.py  timing.py  utauplugin2score.py  world.py
extensions/: dummy.py  lyric_nyaizer.py  score_myaizer.py  style_shifter.py  timing_repairer.py  velocity_applier.py  vibrato_applier.py
nnsvs_recipe_for_enunu/: README.md
py/: .gitignore  README.md  enunu.py  hts2json.py  hts2wav.py  modify_full_label_for_enunu.py  overwrite_full_labels.py  ust2hts.py  ust2hts_old.py
sample/: LICENSE.md  sample_enuconfig.yaml
synthesis/: README.md  convert_score_lab_to_timelag_lab.py  convert_utauplugin_to_score_lab.py  enunu.py  enunu_ground_truth_duration.py  extensions.py  hts2wav.py  install_torch.py  nnsvs_gen_override.py  prepare_enunu_release.py  requirements.txt  score2timelag.py  ust2score.py
tests/: conftest.py  test_infrastructure.py
train/: .gitignore  0_02_check_lab.py  0_04_ust2lab.py  0_08_full2mono.py  0_09_compare_mono_align_and_mono_score.py  0_0_0_copy_files0.py  0_0_1_check_lab.py  0_10_copy_mono_time_to_full.py  0_11_segment_lab.py  0_12_finalize_lab.py  0_13_generate_train_list.py  0_1_1_ust2lab.py  0_1_1_xml2lab.py  0_1_2_merge_rest_full_score.py  0_1_2_merge_rest_mono_align.py  0_1_3_round_lab.py  0_2_compare_mono_align_and_mono_score.py  0_3a_copy_mono_time_to_full.py  0_3b_segment_lab.py  0_4_finalize_lab.py  0_5_generate_train_list.py  README.md  config.yaml  config_rmdn.yaml  data_prep.sh  enuconfig.yaml  finalize_lab.py  force_ust_end_with_rest.py  install_for_CPU.bat  log2csv.py  (+15 more)
(+148 files in other folders)
